Fase2/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    TkErrorNum

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> TkCreate LISTA_DECLARACIONES TkExecute INSTRUCCIONES_CONTROLADOR TkEnd
Rule 2     inicio -> TkExecute INSTRUCCIONES_CONTROLADOR TkEnd
Rule 3     LISTA_DECLARACIONES -> LISTA_DECLARACIONES LISTA_DECLARACIONES
Rule 4     LISTA_DECLARACIONES -> TkInt TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd
Rule 5     LISTA_DECLARACIONES -> TkBool TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd
Rule 6     LISTA_DECLARACIONES -> TkChar TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd
Rule 7     LISTA_IDENT -> LISTA_IDENT TkComa LISTA_IDENT
Rule 8     LISTA_IDENT -> TkIdent
Rule 9     LISTA_COMPORTAMIENTOS -> LISTA_COMPORTAMIENTOS LISTA_COMPORTAMIENTOS
Rule 10    LISTA_COMPORTAMIENTOS -> TkOn CONDICION TkDosPuntos INSTRUCCIONES_ROBOT TkEnd
Rule 11    LISTA_COMPORTAMIENTOS -> <empty>
Rule 12    CONDICION -> TkDeActivation
Rule 13    CONDICION -> TkActivation
Rule 14    CONDICION -> EXPRESION_BIN
Rule 15    CONDICION -> TkDefault
Rule 16    INSTRUCCIONES_ROBOT -> INSTRUCCIONES_ROBOT INSTRUCCIONES_ROBOT
Rule 17    INSTRUCCIONES_ROBOT -> TkStore EXPRESION_BIN TkPunto
Rule 18    INSTRUCCIONES_ROBOT -> TkRecieve TkPunto
Rule 19    INSTRUCCIONES_ROBOT -> TkCollect GUARDAR_VARIABLE TkPunto
Rule 20    INSTRUCCIONES_ROBOT -> TkDrop EXPRESION_BIN TkPunto
Rule 21    INSTRUCCIONES_ROBOT -> TkRight EXPRESION_OPCIONAL TkPunto
Rule 22    INSTRUCCIONES_ROBOT -> TkLeft EXPRESION_OPCIONAL TkPunto
Rule 23    INSTRUCCIONES_ROBOT -> TkUp EXPRESION_OPCIONAL TkPunto
Rule 24    INSTRUCCIONES_ROBOT -> TkDown EXPRESION_OPCIONAL TkPunto
Rule 25    INSTRUCCIONES_ROBOT -> TkRead GUARDAR_VARIABLE TkPunto
Rule 26    INSTRUCCIONES_ROBOT -> TkSend TkPunto
Rule 27    EXPRESION_OPCIONAL -> EXPRESION_BIN
Rule 28    EXPRESION_OPCIONAL -> <empty>
Rule 29    GUARDAR_VARIABLE -> TkAs TkIdent
Rule 30    GUARDAR_VARIABLE -> <empty>
Rule 31    INSTRUCCIONES_CONTROLADOR -> INSTRUCCIONES_CONTROLADOR INSTRUCCIONES_CONTROLADOR
Rule 32    INSTRUCCIONES_CONTROLADOR -> TkActivate LISTA_IDENT TkPunto
Rule 33    INSTRUCCIONES_CONTROLADOR -> TkAdvance LISTA_IDENT TkPunto
Rule 34    INSTRUCCIONES_CONTROLADOR -> TkDeactivate LISTA_IDENT TkPunto
Rule 35    INSTRUCCIONES_CONTROLADOR -> TkIf EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
Rule 36    INSTRUCCIONES_CONTROLADOR -> TkIf EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkElse TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
Rule 37    INSTRUCCIONES_CONTROLADOR -> TkWhile EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
Rule 38    INSTRUCCIONES_CONTROLADOR -> TkCreate LISTA_DECLARACIONES TkExecute INSTRUCCIONES_CONTROLADOR TkEnd
Rule 39    INSTRUCCIONES_CONTROLADOR -> TkExecute INSTRUCCIONES_CONTROLADOR TkEnd
Rule 40    EXPRESION_BIN -> EXPRESION_BIN TkSuma EXPRESION_BIN
Rule 41    EXPRESION_BIN -> EXPRESION_BIN TkResta EXPRESION_BIN
Rule 42    EXPRESION_BIN -> EXPRESION_BIN TkMult EXPRESION_BIN
Rule 43    EXPRESION_BIN -> EXPRESION_BIN TkDiv EXPRESION_BIN
Rule 44    EXPRESION_BIN -> EXPRESION_BIN TkMod EXPRESION_BIN
Rule 45    EXPRESION_BIN -> EXPRESION_BIN TkConjuncion EXPRESION_BIN
Rule 46    EXPRESION_BIN -> EXPRESION_BIN TkDisyuncion EXPRESION_BIN
Rule 47    EXPRESION_BIN -> EXPRESION_BIN TkIgual EXPRESION_BIN
Rule 48    EXPRESION_BIN -> EXPRESION_BIN TkDesigual EXPRESION_BIN
Rule 49    EXPRESION_BIN -> EXPRESION_BIN TkMayor EXPRESION_BIN
Rule 50    EXPRESION_BIN -> EXPRESION_BIN TkMenor EXPRESION_BIN
Rule 51    EXPRESION_BIN -> EXPRESION_BIN TkMayorIgual EXPRESION_BIN
Rule 52    EXPRESION_BIN -> EXPRESION_BIN TkMenorIgual EXPRESION_BIN
Rule 53    EXPRESION_BIN -> TkNegacion EXPRESION_BIN
Rule 54    EXPRESION_BIN -> TkResta EXPRESION_BIN
Rule 55    EXPRESION_BIN -> TkParAbre EXPRESION_BIN TkParCierra
Rule 56    EXPRESION_BIN -> TkNum
Rule 57    EXPRESION_BIN -> TkTrue
Rule 58    EXPRESION_BIN -> TkFalse
Rule 59    EXPRESION_BIN -> TkIdent
Rule 60    EXPRESION_BIN -> TkMe
Rule 61    EXPRESION_BIN -> TkCaracter

Terminals, with rules where they appear

TkActivate           : 32
TkActivation         : 13
TkAdvance            : 33
TkAs                 : 29
TkBool               : 5
TkBot                : 4 5 6
TkCaracter           : 61
TkChar               : 6
TkCollect            : 19
TkComa               : 7
TkConjuncion         : 45
TkCreate             : 1 38
TkDeActivation       : 12
TkDeactivate         : 34
TkDefault            : 15
TkDesigual           : 48
TkDisyuncion         : 46
TkDiv                : 43
TkDosPuntos          : 10 35 36 36 37
TkDown               : 24
TkDrop               : 20
TkElse               : 36
TkEnd                : 1 2 4 5 6 10 35 36 37 38 39
TkErrorNum           : 
TkExecute            : 1 2 38 39
TkFalse              : 58
TkIdent              : 8 29 59
TkIf                 : 35 36
TkIgual              : 47
TkInt                : 4
TkLeft               : 22
TkMayor              : 49
TkMayorIgual         : 51
TkMe                 : 60
TkMenor              : 50
TkMenorIgual         : 52
TkMod                : 44
TkMult               : 42
TkNegacion           : 53
TkNum                : 56
TkOn                 : 10
TkParAbre            : 55
TkParCierra          : 55
TkPunto              : 17 18 19 20 21 22 23 24 25 26 32 33 34
TkRead               : 25
TkRecieve            : 18
TkResta              : 41 54
TkRight              : 21
TkSend               : 26
TkStore              : 17
TkSuma               : 40
TkTrue               : 57
TkUp                 : 23
TkWhile              : 37
error                : 

Nonterminals, with rules where they appear

CONDICION            : 10
EXPRESION_BIN        : 14 17 20 27 35 36 37 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 55
EXPRESION_OPCIONAL   : 21 22 23 24
GUARDAR_VARIABLE     : 19 25
INSTRUCCIONES_CONTROLADOR : 1 2 31 31 35 36 36 37 38 39
INSTRUCCIONES_ROBOT  : 10 16 16
LISTA_COMPORTAMIENTOS : 4 5 6 9 9
LISTA_DECLARACIONES  : 1 3 3 38
LISTA_IDENT          : 4 5 6 7 7 32 33 34
inicio               : 0

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . TkCreate LISTA_DECLARACIONES TkExecute INSTRUCCIONES_CONTROLADOR TkEnd
    (2) inicio -> . TkExecute INSTRUCCIONES_CONTROLADOR TkEnd

    TkCreate        shift and go to state 1
    TkExecute       shift and go to state 3

    inicio                         shift and go to state 2

state 1

    (1) inicio -> TkCreate . LISTA_DECLARACIONES TkExecute INSTRUCCIONES_CONTROLADOR TkEnd
    (3) LISTA_DECLARACIONES -> . LISTA_DECLARACIONES LISTA_DECLARACIONES
    (4) LISTA_DECLARACIONES -> . TkInt TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd
    (5) LISTA_DECLARACIONES -> . TkBool TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd
    (6) LISTA_DECLARACIONES -> . TkChar TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd

    TkInt           shift and go to state 5
    TkBool          shift and go to state 7
    TkChar          shift and go to state 6

    LISTA_DECLARACIONES            shift and go to state 4

state 2

    (0) S' -> inicio .



state 3

    (2) inicio -> TkExecute . INSTRUCCIONES_CONTROLADOR TkEnd
    (31) INSTRUCCIONES_CONTROLADOR -> . INSTRUCCIONES_CONTROLADOR INSTRUCCIONES_CONTROLADOR
    (32) INSTRUCCIONES_CONTROLADOR -> . TkActivate LISTA_IDENT TkPunto
    (33) INSTRUCCIONES_CONTROLADOR -> . TkAdvance LISTA_IDENT TkPunto
    (34) INSTRUCCIONES_CONTROLADOR -> . TkDeactivate LISTA_IDENT TkPunto
    (35) INSTRUCCIONES_CONTROLADOR -> . TkIf EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
    (36) INSTRUCCIONES_CONTROLADOR -> . TkIf EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkElse TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
    (37) INSTRUCCIONES_CONTROLADOR -> . TkWhile EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
    (38) INSTRUCCIONES_CONTROLADOR -> . TkCreate LISTA_DECLARACIONES TkExecute INSTRUCCIONES_CONTROLADOR TkEnd
    (39) INSTRUCCIONES_CONTROLADOR -> . TkExecute INSTRUCCIONES_CONTROLADOR TkEnd

    TkActivate      shift and go to state 15
    TkAdvance       shift and go to state 13
    TkDeactivate    shift and go to state 11
    TkIf            shift and go to state 12
    TkWhile         shift and go to state 14
    TkCreate        shift and go to state 8
    TkExecute       shift and go to state 9

    INSTRUCCIONES_CONTROLADOR      shift and go to state 10

state 4

    (1) inicio -> TkCreate LISTA_DECLARACIONES . TkExecute INSTRUCCIONES_CONTROLADOR TkEnd
    (3) LISTA_DECLARACIONES -> LISTA_DECLARACIONES . LISTA_DECLARACIONES
    (3) LISTA_DECLARACIONES -> . LISTA_DECLARACIONES LISTA_DECLARACIONES
    (4) LISTA_DECLARACIONES -> . TkInt TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd
    (5) LISTA_DECLARACIONES -> . TkBool TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd
    (6) LISTA_DECLARACIONES -> . TkChar TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd

    TkExecute       shift and go to state 17
    TkInt           shift and go to state 5
    TkBool          shift and go to state 7
    TkChar          shift and go to state 6

    LISTA_DECLARACIONES            shift and go to state 16

state 5

    (4) LISTA_DECLARACIONES -> TkInt . TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd

    TkBot           shift and go to state 18


state 6

    (6) LISTA_DECLARACIONES -> TkChar . TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd

    TkBot           shift and go to state 19


state 7

    (5) LISTA_DECLARACIONES -> TkBool . TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd

    TkBot           shift and go to state 20


state 8

    (38) INSTRUCCIONES_CONTROLADOR -> TkCreate . LISTA_DECLARACIONES TkExecute INSTRUCCIONES_CONTROLADOR TkEnd
    (3) LISTA_DECLARACIONES -> . LISTA_DECLARACIONES LISTA_DECLARACIONES
    (4) LISTA_DECLARACIONES -> . TkInt TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd
    (5) LISTA_DECLARACIONES -> . TkBool TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd
    (6) LISTA_DECLARACIONES -> . TkChar TkBot LISTA_IDENT LISTA_COMPORTAMIENTOS TkEnd

    TkInt           shift and go to state 5
    TkBool          shift and go to state 7
    TkChar          shift and go to state 6

    LISTA_DECLARACIONES            shift and go to state 21

state 9

    (39) INSTRUCCIONES_CONTROLADOR -> TkExecute . INSTRUCCIONES_CONTROLADOR TkEnd
    (31) INSTRUCCIONES_CONTROLADOR -> . INSTRUCCIONES_CONTROLADOR INSTRUCCIONES_CONTROLADOR
    (32) INSTRUCCIONES_CONTROLADOR -> . TkActivate LISTA_IDENT TkPunto
    (33) INSTRUCCIONES_CONTROLADOR -> . TkAdvance LISTA_IDENT TkPunto
    (34) INSTRUCCIONES_CONTROLADOR -> . TkDeactivate LISTA_IDENT TkPunto
    (35) INSTRUCCIONES_CONTROLADOR -> . TkIf EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
    (36) INSTRUCCIONES_CONTROLADOR -> . TkIf EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkElse TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
    (37) INSTRUCCIONES_CONTROLADOR -> . TkWhile EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
    (38) INSTRUCCIONES_CONTROLADOR -> . TkCreate LISTA_DECLARACIONES TkExecute INSTRUCCIONES_CONTROLADOR TkEnd
    (39) INSTRUCCIONES_CONTROLADOR -> . TkExecute INSTRUCCIONES_CONTROLADOR TkEnd

    TkActivate      shift and go to state 15
    TkAdvance       shift and go to state 13
    TkDeactivate    shift and go to state 11
    TkIf            shift and go to state 12
    TkWhile         shift and go to state 14
    TkCreate        shift and go to state 8
    TkExecute       shift and go to state 9

    INSTRUCCIONES_CONTROLADOR      shift and go to state 22

state 10

    (2) inicio -> TkExecute INSTRUCCIONES_CONTROLADOR . TkEnd
    (31) INSTRUCCIONES_CONTROLADOR -> INSTRUCCIONES_CONTROLADOR . INSTRUCCIONES_CONTROLADOR
    (31) INSTRUCCIONES_CONTROLADOR -> . INSTRUCCIONES_CONTROLADOR INSTRUCCIONES_CONTROLADOR
    (32) INSTRUCCIONES_CONTROLADOR -> . TkActivate LISTA_IDENT TkPunto
    (33) INSTRUCCIONES_CONTROLADOR -> . TkAdvance LISTA_IDENT TkPunto
    (34) INSTRUCCIONES_CONTROLADOR -> . TkDeactivate LISTA_IDENT TkPunto
    (35) INSTRUCCIONES_CONTROLADOR -> . TkIf EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
    (36) INSTRUCCIONES_CONTROLADOR -> . TkIf EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkElse TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
    (37) INSTRUCCIONES_CONTROLADOR -> . TkWhile EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
    (38) INSTRUCCIONES_CONTROLADOR -> . TkCreate LISTA_DECLARACIONES TkExecute INSTRUCCIONES_CONTROLADOR TkEnd
    (39) INSTRUCCIONES_CONTROLADOR -> . TkExecute INSTRUCCIONES_CONTROLADOR TkEnd

    TkEnd           shift and go to state 24
    TkActivate      shift and go to state 15
    TkAdvance       shift and go to state 13
    TkDeactivate    shift and go to state 11
    TkIf            shift and go to state 12
    TkWhile         shift and go to state 14
    TkCreate        shift and go to state 8
    TkExecute       shift and go to state 9

    INSTRUCCIONES_CONTROLADOR      shift and go to state 23

state 11

    (34) INSTRUCCIONES_CONTROLADOR -> TkDeactivate . LISTA_IDENT TkPunto
    (7) LISTA_IDENT -> . LISTA_IDENT TkComa LISTA_IDENT
    (8) LISTA_IDENT -> . TkIdent

    TkIdent         shift and go to state 26

    LISTA_IDENT                    shift and go to state 25

state 12

    (35) INSTRUCCIONES_CONTROLADOR -> TkIf . EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
    (36) INSTRUCCIONES_CONTROLADOR -> TkIf . EXPRESION_BIN TkDosPuntos INSTRUCCIONES_CONTROLADOR TkElse TkDosPuntos INSTRUCCIONES_CONTROLADOR TkEnd
    (40) EXPRESION_BIN -> . EXPRESION_BIN TkSuma EXPRESION_BIN
    (41) EXPRESION_BIN -> . EXPRESION_BIN TkResta EXPRESION_BIN
    (42) EXPRESION_BIN -> . EXPRESION_BIN TkMult EXPRESION_BIN
    (43) EXPRESION_BIN -> . EXPRESION_BIN TkDiv EXPRESION_BIN
    (44) EXPRESION_BIN -> . EXPRESION_BIN TkMod EXPRESION_BIN
    (45) EXPRESION_BIN -> . EXPRESION_BIN TkConjuncion EXPRESION_BIN
    (46) EXPRESION_BIN -> . EXPRESION_BIN TkDisyuncion EXPRESION_BIN
    (47) EXPRESION_BIN -> . EXPRESION_BIN TkIgual EXPRESION_BIN
    (48) EXPRESION_BIN -> . EXPRESION_BIN TkDesigual EXPRESION_BIN
    (49) EXPRESION_BIN -> . EXPRESION_BIN TkMayor EXPRESION_BIN
    (50) EXPRESION_BIN -> . EXPRESION_BIN TkMenor EXPRESION_BIN
    (51) EXPRESION_BIN -> . EXPRESION_BIN TkMayorIgual EXPRESION_BIN
    (52) EXPRESION_BIN -> . EXPRESION_BIN TkMenorIgual EXPRESION_BIN
    (53) EXPRESION_BIN -> . TkNegacion EXPRESION_BIN
    (54) EXPRESION_BIN -> . TkResta EXPRESION_BIN
    (55) EXPRESION_BIN -> . TkParAbre EXPRESION_BIN TkParCierra
    (56) EXPRESION_BIN -> . TkNum
    (57) EXPRESION_BIN -> . TkTrue
    (58) EXPRESION_BIN -> . TkFalse
    (59) EXPRESION_BIN -> . TkIdent
    (60) EXPRESION_BIN -> . TkMe
    (61) EXPRESION_BIN -> . TkCaracter

    TkNegacion      shift and go to state 30
    TkResta         shift and go to state 36
    TkParAbre       shift and go to state 31
    TkNum           shift and go to state 33
    TkTrue          shift and go to state 27
    TkFalse         shift and go to state 29
    TkIdent         shift and go to state 32
    TkMe            shift and go to state 35
    TkCaracter      shift and go to state 28

    EXPRESION_BIN                  shift and go to state 34

state 13

    (33) INSTRUCCIONES_CONTROLADOR -> TkAdvance . LISTA_IDENT TkPunto
    (7) LISTA_IDENT -> . LISTA_IDENT TkComa LISTA_IDENT
    (8) LISTA_IDENT -> . TkIdent

    TkIdent         shift and go to state 26

    LISTA_IDENT                    shift and go to state 37

state 14
